tests/ui/parser/raw-string-suffix-word.stderr
error: suffixes on string literals are invalid
  --> $DIR/raw-string-suffix-word.rs:5:14
   |
LL |     let s3 = r#"test"#invalid;
   |              ^^^^^^^^^^^^^^^^ invalid suffix `invalid`

error: aborting due to 1 previous error

